migration/migration.less
// -----------------------------
// Migration Styles
// -----------------------------


#migrated-site {




    // Stylesheet overrides
    // -----------------------------


    &.row-editing .container {
        margin: 0;
        padding: 0;
        width: 100%;
    }


    .zone-content {
        padding: 0;
    }
    
    
    


    // Migration styles
    // -----------------------------
    
    
    // Applies spacing to widgets to mimic container width
    .empty-zone,
    #page-zones__main:empty,
    #page-zones__main > .widget:not([data-name="row"]),
    .row:not(.row--width-no-padding) .row__container {
        margin-left: auto;
        margin-right: auto;
        width: ~'calc(100% - 60px)';
    }
    
    
    // Adds spacing to a section when a widget follows it
    #page-zones__main > [data-name="row"] + .widget:not([data-name="row"]),
    #page-zones__main > .widget:not([data-name="row"]) + [data-name="row"]:not(:last-child),
    &.edit #page-zones__main-overlay + .widget:not([data-name="row"]),
    #page-zones__main > .widget:not([data-name="row"]):first-child {
        margin-top: 40px;
    }

    
    // Move spacing to last widget in the main zone (not sections)
    #page-zones__main > .widget:not([data-name="row"]):last-child {
        margin-bottom: 30px;
    }
}

